--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "@types/image-thumbnail": "^1.0.0",
+    "sharp": "^0.25.4",
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "image-thumbnail": "^1.0.13",
-    "sharp": "^0.25.4"
+    "image-thumbnail": "^1.0.13"
   }
 }
